# FlashVideo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lyzirving/flashvideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeghead/libavutil/: ffversion.h
app/src/main/cpp/implementation/: AudioController.cpp  AudioDecoder.cpp  AudioEngine.cpp  AudioPlayer.cpp  FFMpegCore.cpp  FFmpegMuxer.cpp  FaceDetect.cpp  ImgAlgorithm.cpp  ImgUtil.cpp  JavaCallbackUtil.cpp  LogUtil.cpp  MsgQueue.cpp  NativeVideoPlayer.cpp  PacketQueue.cpp  TimeUtil.cpp  VideoController.cpp  VideoDecoder.cpp  VideoManager.cpp
app/src/main/cpp/include/: AudioController.h  AudioData.h  AudioDecoder.h  AudioEngine.h  AudioPlayer.h  Common.h  FFMpegCore.h  FFmpegMuxer.h  FaceDetect.h  ImgAlgorithm.h  ImgUtil.h  JavaCallbackUtil.h  LogUtil.h  MsgQueue.h  NativeVideoPlayer.h  PacketQueue.h  TimeUtil.h  VideoController.h  VideoDecoder.h  VideoManager.h
app/src/main/cpp/soundtouchhead/: STTypes.h
app/src/main/java/com/lyzirving/flashvideo/: MainActivity.java
app/src/main/java/com/lyzirving/flashvideo/camera/: CameraHelper.java  CameraRender.java  GLCameraView.java
app/src/main/java/com/lyzirving/flashvideo/core/: FlashAudio.java  FlashVideo.java  IVideoListener.java  VideoListenerAdapter.java
app/src/main/java/com/lyzirving/flashvideo/edit/: MediaEditOp.java  MediaInfo.java  MusicEditOp.java  ProgressSelectBar.java
app/src/main/java/com/lyzirving/flashvideo/edit/core/: MediaEditEncoder.java  MediaEditor.java  MediaUtil.java  MediaWrapper.java
app/src/main/java/com/lyzirving/flashvideo/edit/core/task/: AudioToPcmTask.java  MediaTask.java  MixPicAndMusicTask.java  PcmToWavTask.java
app/src/main/java/com/lyzirving/flashvideo/face/: FaceDetectAdapter.java  FaceDetector.java  FaceRectView.java  IFaceDetect.java
app/src/main/java/com/lyzirving/flashvideo/imgedit/: IEdit.java  ImgEditView.java
app/src/main/java/com/lyzirving/flashvideo/imgedit/algorithm/: ImgAlgorithm.java  ImgAlgorithmListener.java
app/src/main/java/com/lyzirving/flashvideo/imgedit/filter/: ImgBitmapFilter.java  ImgContrastFilter.java  ImgFilterGroup.java  ImgGaussianFilter.java  ImgHorizontalGaussianFilter.java  ImgSaturationFilter.java  ImgScreenFilter.java  ImgSharpenFilter.java  ImgToonFilter.java  ImgVerticalGaussianFilter.java
app/src/main/java/com/lyzirving/flashvideo/opengl/: EglCore.java  GLVideoView.java  VideoRender.java
app/src/main/java/com/lyzirving/flashvideo/opengl/core/: EglCore.java  MediaConfig.java
app/src/main/java/com/lyzirving/flashvideo/opengl/filter/: BaseFilter.java  BaseFilterGroup.java  BitmapFilter.java  CameraPreviewFilter.java  CaptureFilter.java  ContrastFilter.java  FilterGroup.java  GaussianFilter.java  IFilter.java  OesFilter.java  SaturationFilter.java  ShowFilter.java  YuvFilter.java  YuvVideoFilter.java
app/src/main/java/com/lyzirving/flashvideo/opengl/util/: FilterUtil.java  MatrixUtil.java  TextureUtil.java  VertexUtil.java
app/src/main/java/com/lyzirving/flashvideo/opengl/video/: GLVideoView.java  VideoRender.java  VideoViewListener.java  YuvVideoView.java
app/src/main/java/com/lyzirving/flashvideo/player/: FlashAudio.java  FlashVideo.java  FlashVideoPlayer.java  IPlayer.java  IVideoListener.java  VideoListenerAdapter.java
app/src/main/java/com/lyzirving/flashvideo/record/: FFmpegMuxer.java  RecordEncoder.java  RecordThread.java
app/src/main/java/com/lyzirving/flashvideo/ui/: CameraActivity.java  EditActivity.java  FaceDetectActivity.java  ImgEditActivity.java  MusicActivity.java  VideoActivity.java  VideoPlayerActivity.java
app/src/main/java/com/lyzirving/flashvideo/util/: AssetsManager.java  BitmapUtil.java  ComponentUtil.java  FileUtil.java  LogUtil.java  TimeUtil.java
app/src/main/res/drawable/: icon_thumb.xml  progress_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_editor.xml  activity_img_edit.xml  activity_main.xml  layout_adjust_beauty.xml  layout_adjust_denoise.xml  layout_face_detect.xml  layout_music.xml  layout_video_player.xml  layout_video_player_panel.xml
app/src/main/res/raw/: contrast_shader.glsl  default_fragment_shader.glsl  default_vertex_shader.glsl  gaussian_fragment_shader.glsl  gaussian_vertex_shader.glsl  oes_fragment_shader.glsl  saturation_fragment_shader.glsl  saturation_shader.glsl  sharpen_fragment_shader.glsl  sharpen_vertex_shader.glsl  threexthree_texture_sample_vertex_shader.glsl  toon_fragment_shader.glsl  trans_vertex_shader.glsl  yuv2rgb_fragment_shader.glsl
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/lyzirving/flashvideo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
